[project]
name = "cryo_EMBER"
authors = [
    {name = "David Silva Sanchez", email = "david.silva@yale.edu"},
    {name = "Erik Henning Thiede"},
    {name = "Wai Shing Tang"},
    {name = "Pilar Cossio"},
]

description = "Cryo-EMBER implementation using the cryojax library"
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["CryoEM", "Molecular Dynamics", "single particle"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "numpy",
    "jax[cpu]",
    "matplotlib",
    "mrcfile",
    "MDAnalysis",
]


dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cryo_ember*"]

[project.optional-dependencies]
pdf = ["ReportLab>=1.2", "RXP"]
rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

[project.scripts]
my-script = "my_package.module:function"

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/